<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simtires</name>
  <version>0.1.0</version>
  <description>High-fidelity vehicle simulation with deformable terrain using Project Chrono</description>
  <maintainer email="maxdiekel@gmail.com">Z. Max Diekel</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Standard ROS2 autonomy interfaces -->
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- Chrono ROS2 integration -->
  <depend>chrono_ros_interfaces</depend>
  <depend>chrono_wrapper</depend>
  
  <!-- For launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>